# SylverMath

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xmake.lua
include/: Exponents.hpp  Matrix.hpp  MatrixNew.hpp  Trig.hpp  Types.hpp  Vector.hpp
src/: Exponents.cpp  Matrix.cpp  Matrix2x2.cpp  Matrix2x3.cpp  Matrix2x4.cpp  Matrix3x2.cpp  Matrix3x3.cpp  Matrix3x4.cpp  Matrix4x2.cpp  Matrix4x3.cpp  Matrix4x4.cpp  MatrixNew.cpp  Trig.cpp  Vector.cpp
tests/: CMakeLists.txt  xmake.lua
tests/src/: Tests.cpp
tests/src/Matrix/: Matrix2x2.hpp  MatrixCommon.hpp
tests/src/Vector/: VectorTests.hpp
