cmake_minimum_required(VERSION 3.22)


project(SylverMath VERSION 0.2.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)

option(SYLVER_MATH_TESTS "Build library tests" ON)

include(FetchContent)

file(GLOB_RECURSE SYLVER_MATH_SOURCES ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp)
file(GLOB_RECURSE SYLVER_MATH_HEADERS ${CMAKE_CURRENT_LIST_DIR}/include/*.hpp)

add_library(SylverMath ${SYLVER_MATH_SOURCES} ${SYLVER_MATH_HEADERS})

target_include_directories(SylverMath PUBLIC 
    ${CMAKE_CURRENT_LIST_DIR}/include
)

if(SYLVER_MATH_TESTS)
    add_subdirectory(tests)
endif()


