cmake_minimum_required(VERSION 3.22)


project(SylverMath VERSION 0.2.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)

set(CMAKE_DEBUG_POSTFIX -d)
if(WIN32)
    set(CMAKE_STATIC_LIBRARY_SUFFIX .lib)
endif()

if(CMAKE_SIZEOF_VOID_P EQUAL 4)
    message(FATAL_ERROR "32bit not supported")
endif()

option(SYLVER_MATH_TESTS "Build library tests" OFF)
option(SYLVER_MATH_BUILD_SHARED "Build as a shared library" OFF)

include(FetchContent)

file(GLOB_RECURSE SYLVER_MATH_SOURCES ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp)
file(GLOB_RECURSE SYLVER_MATH_HEADERS ${CMAKE_CURRENT_LIST_DIR}/include/*.hpp)



if(SYLVER_MATH_BUILD_SHARED)
    add_library(SylverMath SHARED ${SYLVER_MATH_SOURCES} ${SYLVER_MATH_HEADERS})
else()
    add_library(SylverMath STATIC ${SYLVER_MATH_SOURCES} ${SYLVER_MATH_HEADERS})
endif()

target_include_directories(SylverMath PUBLIC 
    ${CMAKE_CURRENT_LIST_DIR}/include
)

if(SYLVER_MATH_TESTS)
    add_subdirectory(tests)
endif()


